Fix horizontal scrolling

--- a/projects/ngrx.io/src/styles/1-layouts/_homepage.scss
+++ b/projects/ngrx.io/src/styles/1-layouts/_homepage.scss
@@ -7,6 +7,10 @@ aio-shell.page-home {
     color: white;
   }
 
+  .mat-drawer-content {
+    overflow-x: hidden;
+  }  
+
   header {
     background-image: url('/assets/images/header.svg');
     background-size: cover;
